# exploring_software_development_tools

./: .gitignore  404.html  CLAUDE.md  CNAME  GEMINI.md  README.md  index.html  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
automation/makefiles/: index.html
automation/semantic_versioning/: index.html
docs/: CNAME  index.md
docs/automation/: makefiles.md  semantic_versioning.md
docs/efficiency/: direnv.md  fzf_advanced.md  git_workflows.md  github_cli.md  shell_productivity.md  ssh_mastery.md  tmux.md  vscode_remote.md
docs/essentials/: jq_parsing_json.md  regex_for_sres.md  terminal_diagnostics.md  vim_survival_mode.md  yq_wrangling_yaml.md
docs/mastery/: advanced_shell.md  automation_patterns.md  git_internals.md  github_actions_sre.md  local_testing_docker.md  neovim_full_setup.md  semantic_versioning.md
docs/nvim/: intro_to_nvim.md
efficiency/direnv/: index.html
efficiency/fzf_advanced/: index.html
efficiency/git_workflows/: index.html
efficiency/github_cli/: index.html
efficiency/shell_productivity/: index.html
efficiency/ssh_mastery/: index.html
efficiency/tmux/: index.html
efficiency/vscode_remote/: index.html
essentials/jq_parsing_json/: index.html
essentials/regex_for_sres/: index.html
essentials/terminal_diagnostics/: index.html
essentials/vim_survival_mode/: index.html
essentials/yq_wrangling_yaml/: index.html
mastery/advanced_shell/: index.html
mastery/automation_patterns/: index.html
search/: search_index.json
stylesheets/: extra.css
(+16 files in other folders)
